# bachelor_thesis

./: Predictor.ipynb  README.md  graph_extraction.lua  install_lua_packages.sh  model_training.ipynb  start_luadb_in_all_packages.sh
classification/: graph_predictor.ipynb  model_training.ipynb
data/30log/: 30log.lua.json  30logclean.lua.json  30logglobal.lua.json  class.lua.json  inheritance.lua.json  instantiation.lua.json  introspection.lua.json  mixin.lua.json  tests.lua.json
data/StackTracePlus/: StackTracePlus.lua.json  run.lua.json  test.lua.json  test_questionmark.lua.json
data/ZipWriter/: AesFileEncrypt.lua.json  ZipWriter.lua.json  aes.lua.json  binary_converter.lua.json  charset.lua.json  cp.lua.json  mkarch.lua.json  test.lua.json  utils.lua.json
data/abelhas/: cool.lua.json  gnuplot.lua.json  param1.lua.json  pso.lua.json  schwefel7.lua.json  test.lua.json
data/alien/: alien.lua.json  gtk.lua.json  libc.lua.json  string_array.lua.json  test_alien.lua.json
data/alt-getopt/: alt_getopt.lua.json
data/ansicolors/: ansicolors.lua.json  ansicolors_spec.lua.json
data/asklua/: ask.lua.json  mininum.lua.json  mininum_test.lua.json
data/basexx/: base_spec.lua.json  basexx.lua.json
data/bencode/: bencode.lua.json  compare.lua.json  dumptorrent.lua.json  neg_int.lua.json  runtests.lua.json
data/bitlib/: find_limits.lua.json  test.lua.json
data/busted/: TAP.lua.json  ar.lua.json  async_spec.lua.json  base.lua.json  block.lua.json  busted.lua.json  cl_compile_fail.lua.json  cl_error_messages.lua.json  cl_errors.lua.json  cl_execute_fail.lua.json  cl_failing_support.lua.json  cl_filter.lua.json  cl_gc_error.lua.json  cl_helper_script.lua.json  cl_list.lua.json  cl_lua_path.lua.json  cl_output_handler.lua.json  cl_pending.lua.json  cl_random_seed.lua.json  cl_randomize.lua.json  cl_sort.lua.json  cl_spec.lua.json  cl_standalone.lua.json  cl_success.lua.json  cl_tags.lua.json  cl_test_module.lua.json  cl_two_failures.lua.json  cli.lua.json  cli_spec.lua.json  compatibility.lua.json  configuration_loader.lua.json  configuration_loader_spec.lua.json  context.lua.json  core.lua.json  core_spec.lua.json  de.lua.json  done.lua.json  en.lua.json  environment.lua.json  es.lua.json  (+46 more)
data/cd/: cdpdf.lua.json  iupcdaux.lua.json  make_hh.lua.json  multitest.lua.json  simpledraw.lua.json  wb_build.lua.json  wb_usr.lua.json
data/cd-examples/: cdpdf.lua.json  iupcdaux.lua.json  multitest.lua.json  simpledraw.lua.json
data/cgilua/: app.lua.json  authentication.lua.json  authentication_conf.lua.json  cgilua.lua.json  check.lua.json  config.lua.json  cookies.lua.json  dispatcher.lua.json  download.lua.json  env.lua.json  loader.lua.json  lp.lua.json  mime.lua.json  post.lua.json  prepara_sql2.lua.json  readuntil.lua.json  serialize.lua.json  session.lua.json  tcgi1.lua.json  test_conc.lua.json  test_cookies.lua.json  test_err.lua.json  test_fs.lua.json  test_htk.lua.json  test_lib.lua.json  test_main.lua.json  test_session.lua.json  test_sql.lua.json  test_sql2.lua.json  tfcgi1.lua.json  tmod1.lua.json  urlcode.lua.json
extraction/: all_packages.txt  graph_extraction.lua  install_lua_packages.sh  run_in_single_package.sh  start_debug.sh  start_luadb_in_all_packages.sh
modules/alien/: CMakeLists.txt  dist.info
modules/alien/cmake/: FindFFI.cmake
modules/alien/samples/: gtk.lua  string_array.lua
modules/apr/: CMakeLists.txt  dist.info
modules/apr/include/arch/unix/: apr_private.h.cmake
modules/apr/test/: CMakeLists.txt
modules/cd-examples/: CMakeLists.txt  dist.info
modules/cd-examples/test/: metafile.c
modules/getdoc/: CMakeLists.txt  README.md  dist.info
modules/getdoc/src/: luagetdoc.lua
modules/getdoc/src/getdoc/: init.lua  util.lua
modules/im-examples/: CMakeLists.txt  dist.info
modules/im-examples/cmake/: FindIUP.cmake
modules/im-examples/examples/C/: iupglview.c  proc_fourier.cpp
modules/lanes/: CMakeLists.txt  dist.info
modules/lanes/cmake/: FindLua.cmake
modules/lanes/tests/: hangtest.lua
modules/ldoc/: CMakeLists.txt  dist.info
modules/ldoc/tests/: one.md
modules/librs232/: CMakeLists.txt  dist.info
modules/librs232/src/: rs232_windows.c
modules/libsophia/: CMakeLists.txt  dist.info
modules/libsophia/db/: sp.c
modules/libzmq/: CMakeLists.txt  dist.info
modules/libzmq/cmake/: TestZMQVersion.cmake  configure.cmake
modules/lrexlib-oniguruma/: CMakeLists.txt  dist.info
modules/lrexlib-posix/: CMakeLists.txt  dist.info
modules/lrexlib-tre/: CMakeLists.txt  dist.info
modules/lrexlib-tre/cmake/: FindTRE.cmake
modules/lua-apr/: CMakeLists.txt  Makefile.win  dist.info  make.cmd
modules/lua-apr/cmake/: FindAPR.cmake
modules/lua-apr/doc/: docs.html  docs.md  notes.html  readme.html  todo.html
modules/lua-apr/src/: lua_apr_config.h.cmake
modules/lua-curl/: CMakeLists.txt  COPYING  dist.info
modules/lua-iconv/: CMakeLists.txt  dist.info
modules/lua-zlib/: CMakeLists.txt  dist.info
modules/lua-zmq/: CMakeLists.txt  dist.info  zmq.nobj.c
modules/lua-zmq/cmake/: FindZMQ.cmake  LuaNativeObjects.cmake
modules/luacomments/: CMakeLists.txt  README.md  dist.info
modules/luacomments/src/: lua-addComments.lua
modules/luacomments/src/comments/: init.lua  templateComments.lua
modules/luadist-activate/: CMakeLists.txt  activate  dist.info  readme.md
modules/luadoc/: CMakeLists.txt  dist.info
modules/luaffi/: CMakeLists.txt  call_x64.h  call_x64win.h  call_x86.h  dist.info
modules/luanativeobjects/: CMakeLists.txt  dist.info
modules/luapgsql/: CMakeLists.txt  dist.info
modules/luaposix/: CMakeLists.txt  config.h.cmake  dist.info
modules/luarocks/: .travis.yml  CMakeLists.txt  dist.info  install.bat  mingw.cfg
modules/luarocks/src/luarocks/: cfg.lua
modules/luasql-sqlite/: CMakeLists.txt  dist.info
modules/luasql-sqlite/cmake/: FindSQLite.cmake
modules/luazip/: CMakeLists.txt  dist.info
modules/metalua/: CMakeLists.txt  dist.info
modules/metalua/src/: make.sh.in  metalua.in
modules/metalua/src/compiler/: metalua.mlua  mlc.mlua
modules/ninja/: CMakeLists.txt  dist.info
(+2799 files in other folders)
